2006-05-17  Mark D. Baushke  <mdb@gnu.org>

	* NEWS: Remove wording about backed out change for added files.
	Use "NONE" instead of "0" again.
	
2006-05-16  Derek Price  <derek@ximbiot.com>

	* NEWS: Correct wording of previous entry since commits of added files
	have passed the correct old revision for some time.

2006-05-16  Mark D. Baushke  <mdb@gnu.org>

	* NEWS: Note new %a format character and new behavior of %{vV}
	when UseNewInfoFmtStrings is enabled.
	(CVS patch #5099 from Michael K. Sanders <msanders@confusion.net>.)

2006-05-16  Derek Price  <derek@ximbiot.com>

	* configure.in: Always set CVS_ADMIN_GROUP and set HAVE_CVS_ADMIN_GROUP
	when it will be useful.

2006-05-15  Mark D. Baushke  <mdb@gnu.org>

	* configure: Regenerate.
	* maint-aux/gnulib-filelist.txt: Regenerated via gnulib-update.

2006-05-13  Mark Baushke  <mdb@gnu.org>

	* configure: Regenerate.
	* build-aux/config.rpath: Regenerated via gnulib-update.

2006-05-10  Derek Price  <derek@ximbiot.com>

	* BUGS: Note temporary hobling of log_accum.pl.

2006-05-08  Derek Price  <derek@ximbiot.com>

	* configure.in: s/%a/%@/ & s/%t/%M/ for sign/verify templates.

2006-04-27  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that GSSAPI builds under HP-UX.

2006-04-25  Derek Price  <derek@ximbiot.com>

	* configure.in: Move GNU function attribute protection from src/cvs.h.
	(Report from Mark D. Baushke <mdb@gnu.org>.)

	* maint-aux/gnulib-filelist.txt: Updated by gnulib-update.

	* maint-aux/gnulib-update: Do cleanup on CTRL-C.

2006-04-12  Derek Price  <derek@ximbiot.com>

	* m4/error.m4, m4/time_r.m4: Update from GNULIB.

2006-01-20  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2006-01-18  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

	* configure.in: Define $DEFAULT_VERIFY_TEMPLATE for Makefiles.

2006-01-13  Derek Price  <derek@ximbiot.com>

	* GPG-TODO: Note progress.

2006-01-11  Derek Price  <derek@ximbiot.com>
