@@ -39,7 +39,7 @@
    option. To disable access control for CVS admin, run configure with the
    --without-cvs-admin-group option in order to comment out the define below.
    */
-#undef CVS_ADMIN_GROUP
+#define CVS_ADMIN_GROUP "none"
 
 /* When committing a permanent change, CVS and RCS make a log entry of who
    committed the change. If you are committing the change logged in as "root"
@@ -172,6 +172,9 @@
 
 /* Define if you have the crypt function. */
 #undef HAVE_CRYPT
+
+/* Define if CVS_ADMIN_GROUP should be used. */
+#undef HAVE_CVS_ADMIN_GROUP
 
 /* Define if the GNU dcgettext() function is already present or preinstalled.
    */
