@@ -1,3 +1,9 @@
+2006-05-19  Mark D. Baushke  <mdb@gnu.org>
+
+	* config.h.in.in: Add #define CVS_ADMIN_GROUP and missing #undef
+	HAVE_CVS_ADMIN_GOUP.
+	* config.h, config.h.in, stamp-chi: Regenerated.
+
 2006-05-14  Mark D. Baushke  <mdb@gnu.org>
 
 	* filesubr.c (isdir, islink, isreadable, isaccessible): Return bool.
